[gd_scene load_steps=35 format=2]

[ext_resource path="res://Assets/CGTuts_OceanHDRI_Freebie_001.hdr" type="Texture" id=1]
[ext_resource path="res://Scenes/Left_Controller.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Right_Controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Movement_Vignette.tscn" type="PackedScene" id=4]
[ext_resource path="res://fish.tscn" type="PackedScene" id=5]
[ext_resource path="res://goodemail sara.jpeg" type="Texture" id=8]
[ext_resource path="res://netflix scam sara.webp" type="Texture" id=9]
[ext_resource path="res://microsoft scam sara.png" type="Texture" id=10]
[ext_resource path="res://Game.gd" type="Script" id=14]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0.871826, 0.707031, 1 )
metallic = 0.5
roughness = 0.53

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=24]

[sub_resource type="SpatialMaterial" id=25]

[sub_resource type="BoxShape" id=26]

[sub_resource type="CubeMesh" id=27]

[sub_resource type="SpatialMaterial" id=28]

[sub_resource type="BoxShape" id=29]

[sub_resource type="CubeMesh" id=32]

[sub_resource type="SpatialMaterial" id=33]

[sub_resource type="BoxShape" id=30]

[sub_resource type="CubeMesh" id=34]

[sub_resource type="SpatialMaterial" id=35]

[sub_resource type="BoxShape" id=31]

[sub_resource type="CubeMesh" id=36]

[sub_resource type="SpatialMaterial" id=37]
albedo_color = Color( 0.14902, 0.356863, 0.678431, 1 )

[sub_resource type="BoxShape" id=38]

[sub_resource type="BoxShape" id=39]
extents = Vector3( 2.21011, 1.10024, 0.2162 )

[sub_resource type="PanoramaSky" id=11]
radiance_size = 4
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=12]
background_mode = 2
background_sky = SubResource( 11 )
fog_height_min = 0.0
fog_height_max = 100.0
ssao_quality = 0
glow_enabled = true
glow_levels/2 = true
glow_levels/4 = true
glow_levels/5 = false
glow_intensity = 1.0
glow_bicubic_upscale = true

[sub_resource type="CapsuleShape" id=40]
height = 0.002

[sub_resource type="CylinderMesh" id=21]
top_radius = 0.2
bottom_radius = 0.5
height = 0.2

[sub_resource type="SpatialMaterial" id=22]
flags_transparent = true
flags_unshaded = true
albedo_color = Color( 0.460938, 0.633606, 1, 0.431373 )

[sub_resource type="CylinderMesh" id=23]
top_radius = 0.01
bottom_radius = 0.1
height = 0.8

[node name="Game" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.1208, 0, -1.59007 )
script = ExtResource( 14 )
fish_scene = ExtResource( 5 )

[node name="World" type="Spatial" parent="."]

[node name="Floor_Main" type="MeshInstance" parent="World"]
transform = Transform( 100, 0, 0, 0, 1, 0, 0, 0, 40, 76.7479, -0.828144, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="World/Floor_Main"]

[node name="CollisionShape" type="CollisionShape" parent="World/Floor_Main/StaticBody"]
shape = SubResource( 3 )

[node name="wall1" type="MeshInstance" parent="World"]
transform = Transform( -1.74846e-06, 0, 1, 0, 5, 0, -40, 0, -4.37114e-08, -23.4369, 4.54811, 0 )
mesh = SubResource( 24 )
material/0 = SubResource( 25 )

[node name="StaticBody" type="StaticBody" parent="World/wall1"]

[node name="CollisionShape" type="CollisionShape" parent="World/wall1/StaticBody"]
shape = SubResource( 26 )

[node name="wall2" type="MeshInstance" parent="World"]
transform = Transform( 40, 0, 0, 0, 5, 0, 0, 0, 1, 16.5883, 4.64849, 9.59282 )
mesh = SubResource( 27 )
material/0 = SubResource( 28 )

[node name="StaticBody" type="StaticBody" parent="World/wall2"]

[node name="CollisionShape" type="CollisionShape" parent="World/wall2/StaticBody"]
shape = SubResource( 29 )

[node name="wall3" type="MeshInstance" parent="World"]
transform = Transform( 1, 0, 0, 0, 5, 0, 0, 0, 40, 3.93865, 4.81413, 0 )
mesh = SubResource( 32 )
material/0 = SubResource( 33 )

[node name="StaticBody" type="StaticBody" parent="World/wall3"]

[node name="CollisionShape" type="CollisionShape" parent="World/wall3/StaticBody"]
shape = SubResource( 30 )

[node name="wall4" type="MeshInstance" parent="World"]
transform = Transform( 40, 0, 0, 0, 5, 0, 0, 0, 1, 15.7999, 4.67461, 39.1097 )
mesh = SubResource( 34 )
material/0 = SubResource( 35 )

[node name="StaticBody" type="StaticBody" parent="World/wall4"]

[node name="CollisionShape" type="CollisionShape" parent="World/wall4/StaticBody"]
shape = SubResource( 31 )

[node name="pond" type="MeshInstance" parent="World"]
transform = Transform( 2, 0, 0, 0, 1, 0, 0, 0, 2, -18.2581, -0.30903, 33.0761 )
mesh = SubResource( 36 )
material/0 = SubResource( 37 )

[node name="fish_pond" type="StaticBody" parent="World/pond"]

[node name="CollisionShape" type="CollisionShape" parent="World/pond/fish_pond"]
shape = SubResource( 38 )

[node name="ScamArea" type="Area" parent="World"]
transform = Transform( 0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, -9.26722, 2.40306, 10.8413 )

[node name="scam1" type="Sprite3D" parent="World/ScamArea"]
texture = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="World/ScamArea"]
shape = SubResource( 39 )

[node name="ScamArea2" type="Area" parent="World"]
transform = Transform( 0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, -16.3455, 2.356, 10.7025 )

[node name="scam2" type="Sprite3D" parent="World/ScamArea2"]
texture = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="World/ScamArea2"]
shape = SubResource( 39 )

[node name="NotScamArea" type="Area" parent="World"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.21398, 2.245, 11.9609 )

[node name="not scam" type="Sprite3D" parent="World/NotScamArea"]
texture = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="World/NotScamArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.263896, 0.151283, 0.0738735 )
shape = SubResource( 39 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 12 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.223386, 0.830958, -0.509517, 0, 0.522726, 0.852501, 0.97473, -0.190437, 0.11677, 0, 19.163, 0 )
shadow_enabled = true
directional_shadow_max_distance = 200.0

[node name="ARVROrigin" type="ARVROrigin" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.88766, 0.177191, 31.3995 )
world_scale = 1.4

[node name="CameraCollider" type="KinematicBody" parent="ARVROrigin"]

[node name="CollisionShape" type="CollisionShape" parent="ARVROrigin/CameraCollider"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
shape = SubResource( 40 )

[node name="Player_Camera" type="ARVRCamera" parent="ARVROrigin"]
transform = Transform( 1, 0, 0, 0, -0.999858, -0.0168591, 0, 0.0168591, -0.999858, 0, 1.49012e-08, 0 )
current = true

[node name="Left_Controller" parent="ARVROrigin" instance=ExtResource( 2 )]
controller_id = 2

[node name="Right_Controller" parent="ARVROrigin" instance=ExtResource( 3 )]
controller_id = 1

[node name="Movement_Vignette" parent="ARVROrigin" instance=ExtResource( 4 )]
visible = false

[node name="Teleport_Mesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 21 )
material/0 = SubResource( 22 )

[node name="Teleport_Pointy" type="MeshInstance" parent="Teleport_Mesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.679908, 0 )
mesh = SubResource( 23 )
material/0 = SubResource( 22 )

[connection signal="body_entered" from="World/ScamArea" to="." method="_on_ScamArea_body_entered"]
[connection signal="body_entered" from="World/ScamArea2" to="." method="_on_ScamArea2_body_entered"]
[connection signal="body_entered" from="World/NotScamArea" to="." method="_on_NotScamArea_body_entered"]
